--- a/reports/Взаимодействие_с_организацией-партнёром_отчёт.md
+++ b/reports/Взаимодействие_с_организацией-партнёром_отчёт.md
@@ -1,1 +1,5 @@
+# Взаимодействие с организацией-партнёром
 
+## Мастер-класс «Продажи в электроэнергетике (В2В)» от компании ООО «Таврида Электрик МСК»
+
+## Мастер класс от компании «Инфосистемы Джет»
